--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Kompar 3P Page 2</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -18,111 +8,55 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Recevez votre offre par Mail : </h2>
-        <form id="offer-form">
-            <div class="form-field">
-                <label for="nom">Nom :</label>
-                <input type="text" id="nom" name="nom" required>
-            </div>
-            <div class="form-field">
-                <label for="prenom">Prénom :</label>
-                <input type="text" id="prenom" name="prenom" required>
-            </div>
-            <div class="form-field">
-                <label for="dateNaissance">Date de naissance :</label>
-                <input type="date" id="dateNaissance" name="dateNaissance" required>
-            </div>
-            <div class="form-field">
-                <label for="nationalite">Nationalité :</label>
-                <select id="nationalite" name="nationalite" required>
-                    <option value="">Sélectionnez une nationalité</option>
-                    <!-- Options de nationalité -->
-                      <option value="at">Autriche</option>
-  <option value="al">Albanie</option>
-    <option value="dz">Algérie</option>
-    <option value="ar">Argentine</option>
-    <option value="at">Autriche</option>
-    <option value="be">Belgique</option>
-    <option value="ba">Bosnie-Herzégovine</option>
-    <option value="br">Brésil</option>
-    <option value="bg">Bulgarie</option>
-    <option value="cm">Cameroun</option>
-    <option value="cd">République démocratique du Congo</option>
-    <option value="co">Colombie</option>
-    <option value="hr">Croatie</option>
-    <option value="ci">Côte d'Ivoire</option>
-    <option value="cz">République tchèque</option>
-    <option value="dk">Danemark</option>
-    <option value="ee">Estonie</option>
-    <option value="ec">Équateur</option>
-    <option value="er">Érythrée</option>
-    <option value="et">Éthiopie</option>
-    <option value="fi">Finlande</option>
-    <option value="fr">France</option>
-    <option value="de">Allemagne</option>
-    <option value="gn">Guinée</option>
-    <option value="gr">Grèce</option>
-    <option value="hu">Hongrie</option>
-    <option value="ie">Irlande</option>
-    <option value="it">Italie</option>
-    <option value="ke">Kenya</option>
-    <option value="lv">Lettonie</option>
-    <option value="lt">Lituanie</option>
-    <option value="lu">Luxembourg</option>
-    <option value="mt">Malte</option>
-    <option value="ml">Mali</option>
-    <option value="ma">Maroc</option>
-    <option value="mx">Mexique</option>
-    <option value="me">Monténégro</option>
-    <option value="nl">Pays-Bas</option>
-    <option value="pl">Pologne</option>
-    <option value="pt">Portugal</option>
-    <option value="pe">Pérou</option>
-    <option value="ro">Roumanie</option>
-    <option value="rs">Serbie</option>
-    <option value="sn">Sénégal</option>
-    <option value="sk">Slovaquie</option>
-    <option value="si">Slovénie</option>
-    <option value="sd">Soudan</option>
-    <option value="es">Espagne</option>
-    <option value="se">Suède</option>
-    <option value="ch">Suisse</option>
-    <option value="tn">Tunisie</option>
-    <option value="tr">Turquie</option>
-    <option value="uk">Royaume-Uni</option>
-    <option value="uy">Uruguay</option>
-    <option value="us">États-Unis</option>
-    <option value="xkx">Kosovo</option>
-                    <!-- Ajoutez les autres options ici -->
-                </select>
-            </div>
-            <div class="form-field">
-                <label for="permis">Permis :</label>
-                <select id="permis" name="permis" required>
-                    <option value="">Sélectionnez un permis</option>
-                    <option value="Nationalité Suisse">Nationalité Suisse</option>
-                    <option value="B">B</option>
-                    <option value="C">C</option>
-                    <option value="G">G</option>
-                    <option value="autre">Autre</option>
-                </select>
-            </div>
-            <div class="form-field">
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-field">
-                <label for="telephone">Numéro de téléphone :</label>
-                <input type="tel" id="telephone" name="telephone" required>
-            </div>
-            <button type="submit">Recevoir mon offre Gratuitement</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
+        <h2></h2>
 
+        <div class="choice-group">
+            <h3>Vous êtes :</h3>
+            <div class="choice" data-type="gender">Un homme</div>
+            <div class="choice" data-type="gender">Une femme</div>
+        </div>
+        <div class="choice-group">
+            <h3>Votre situation :</h3>
+            <div class="choice" data-type="status">Salarié</div>
+            <div class="choice" data-type="status">Autre</div>
+        </div>
+
+        <div class="slider-container">
+            <h3>Âge :</h3>
+            <div class="slider-wrapper">
+                <input type="range" min="25" max="65" value="25" class="slider" id="ageSlider">
+                <div class="slider-value" id="age-display">25 ans</div>
+            </div>
+        </div>
+
+        <div class="slider-container">
+            <h3>Montant épargné :</h3>
+            <div class="slider-wrapper">
+                <input type="range" min="1" max="12" value="1" step="1" class="slider" id="savingsSlider">
+                <div class="slider-value" id="savings-display">100 CHF / mois</div>
+            </div>
+        </div>
+
+        <div class="result-container">
+            <div id="capital-display">
+                <span>Votre capital à 65 ans :</span> 
+                <strong class="highlighted">0 CHF</strong>
+            </div>
+
+            <div id="annual-tax-savings">
+                <span>Économie d'impôt par an :</span> 
+                <strong class="highlighted">0 CHF</strong>
+            </div>
+
+            <div id="tax-savings">
+                <span>Économie d'impôt à 65 ans :</span> 
+                <strong class="highlighted">0 CHF</strong>
+            </div>
+        </div>
+
+        <button id="request-offer-button">Recevoir mon offre par mail</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
